--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html, body, #__next {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #374151; /* bg-gray-700 */
+  color: white;
+}
