--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
   --foreground: #171717;
 }
 
+
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -14,7 +16,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #FEFEFE;
     --foreground: #ededed;
   }
 }
