--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,6 @@ html, body, #__next {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #374151; /* bg-gray-700 */
+  background-color: #FEFEFE; 
   color: white;
 }
